--- a/Server_Controll/Server_Controll.vcxproj
+++ b/Server_Controll/Server_Controll.vcxproj
@@ -139,12 +139,18 @@
     <ClCompile Include="..\Common\Src\Network\NetworkManager.cpp" />
     <ClCompile Include="..\Common\Src\Network\Worker.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Src\Business\LobbyServer.cpp" />
+    <ClCompile Include="Src\Business\ServerControlCenter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Common\Include\Network\BasicData.h" />
     <ClInclude Include="..\Common\Include\Network\Networkmanager.h" />
     <ClInclude Include="..\Common\Include\Network\Worker.h" />
+    <ClInclude Include="..\Common\Include\Utility\Debug.h" />
     <ClInclude Include="..\Common\Include\Utility\LockFreeCircleQueue.h" />
+    <ClInclude Include="Include\Business\Job.h" />
+    <ClInclude Include="Include\Business\LobbyServer.h" />
+    <ClInclude Include="Include\Business\ServerControlCenter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
