--- a/Server_Controll/Server_Controll.vcxproj.filters
+++ b/Server_Controll/Server_Controll.vcxproj.filters
@@ -11,11 +11,11 @@
     <ClCompile Include="..\Common\Src\Network\Worker.cpp">
       <Filter>Network</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Business\ServerControlCenter.cpp">
-      <Filter>Business</Filter>
+    <ClCompile Include="Src\Business\ControlServer.cpp">
+      <Filter>Control</Filter>
     </ClCompile>
     <ClCompile Include="Src\Business\LobbyServer.cpp">
-      <Filter>Business</Filter>
+      <Filter>Control</Filter>
     </ClCompile>
     <ClCompile Include="..\Common\Src\Utility\Debug.cpp">
       <Filter>Utility</Filter>
@@ -28,7 +28,7 @@
     <Filter Include="Utility">
       <UniqueIdentifier>{4d3852b6-f3ee-46d2-8487-d66d361286db}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Business">
+    <Filter Include="Control">
       <UniqueIdentifier>{e31fa63c-6cb6-4446-a9e7-fa599234a9cc}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -45,17 +45,20 @@
     <ClInclude Include="..\Common\Include\Utility\LockFreeCircleQueue.h">
       <Filter>Utility</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Business\ServerControlCenter.h">
-      <Filter>Business</Filter>
+    <ClInclude Include="Include\Business\ControlServer.h">
+      <Filter>Control</Filter>
     </ClInclude>
     <ClInclude Include="Include\Business\Job.h">
-      <Filter>Business</Filter>
+      <Filter>Control</Filter>
     </ClInclude>
     <ClInclude Include="..\Common\Include\Utility\Debug.h">
       <Filter>Utility</Filter>
     </ClInclude>
     <ClInclude Include="Include\Business\LobbyServer.h">
-      <Filter>Business</Filter>
+      <Filter>Control</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\Include\Utility\ConfigCreator.h">
+      <Filter>Utility</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
