인증서버허브작업중

--- a/Server_Auth/Server_Auth.vcxproj
+++ b/Server_Auth/Server_Auth.vcxproj
@@ -132,6 +132,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Src\AuthHub.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Include\AuthHub.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
